--- a/page5.html
+++ b/page5.html
@@ -6,10 +6,11 @@
   <style>
     body {
       margin: 0;
+      padding: 0;
       height: 100vh;
       display: flex;
       flex-direction: column;
-      justify-content: center;
+      justify-content: flex-start;
       align-items: center;
       background: black;
       overflow: hidden;
@@ -22,16 +23,20 @@
     .top-text {
       font-size: 24px;
       font-weight: bold;
-      margin-bottom: 20px;
+      margin-top: 20px;
+      margin-bottom: 30px;
       line-height: 1.8;
     }
 
-    /* Cube */
+    /* Cube wrapper to fix positioning */
     .scene {
       width: 450px;
       height: 450px;
       perspective: 1000px;
-      margin-bottom: 40px;
+      margin: 20px 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
     .cube {
       width: 100%;
@@ -44,7 +49,7 @@
       position: absolute;
       width: 450px;
       height: 450px;
-      object-fit: cover;
+      object-fit: contain; /* Keeps full image, no crop */
     }
     .front  { transform: rotateY(  0deg) translateZ(225px); }
     .back   { transform: rotateY(180deg) translateZ(225px); }
@@ -60,7 +65,12 @@
 
     /* Quiz */
     .quiz {
-      margin-top: 20px;
+      margin-top: 40px;
+    }
+    .quiz p {
+      font-size: 18px;
+      font-weight: bold;
+      margin-bottom: 10px;
     }
     .quiz input {
       padding: 8px;
@@ -110,7 +120,7 @@
 
   <!-- Quiz -->
   <div class="quiz">
-    <p><b>Next page ku porathukku unnoda loosu ku more than 10 hug kudu🫂...</b></p>
+    <p>Next page ku porathukku unnoda loosu ku more than 10 hug kudu🫂...</p>
     <input type="text" id="answer" placeholder="Enter your answer">
     <button onclick="checkAnswer()">Submit</button>
   </div>
