--- a/page6.html
+++ b/page6.html
@@ -7,31 +7,36 @@
     body {
       margin: 0;
       padding: 0;
-      background: #000;
-      color: white;
       font-family: Arial, sans-serif;
       text-align: center;
       overflow: hidden;
+      position: relative;
+      color: white;
+      background: url("Saree2.jpg") no-repeat center center fixed;
+      background-size: cover;
     }
     h1 {
       font-size: 2em;
       margin-top: 15px;
       font-weight: bold;
+      position: relative;
+      z-index: 3;
+      text-shadow: 2px 2px 5px #000;
     }
     h2 {
       font-size: 1.4em;
       margin: 8px 0 15px 0;
-    }
-    .image-container img {
-      width: 70%; /* bigger size */
-      max-width: 400px;
-      border-radius: 20px;
-      box-shadow: 0 0 25px #fff;
+      position: relative;
+      z-index: 3;
+      text-shadow: 2px 2px 5px #000;
     }
     .quiz {
-      margin-top: 15px;
+      margin-top: 20px;
       font-weight: bold;
       font-size: 1.2em;
+      position: relative;
+      z-index: 3;
+      text-shadow: 2px 2px 5px #000;
     }
     input, button {
       margin: 10px;
@@ -48,14 +53,22 @@
     /* Floating Emojis */
     .emoji {
       position: absolute;
-      font-size: 2rem;
+      font-size: 2.5rem;
       animation: floatUp linear forwards;
-      opacity: 0.9;
-      z-index: 999;
+      opacity: 1;
+      z-index: 5;
+      pointer-events: none;
     }
     @keyframes floatUp {
       0% { transform: translateY(100vh) scale(1); opacity: 1; }
       100% { transform: translateY(-20vh) scale(1.5); opacity: 0; }
+    }
+    /* Fireworks canvas in background */
+    #fireworks {
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: 1;
     }
   </style>
 </head>
@@ -63,10 +76,6 @@
 
   <h1>Alzhagu Bomma💗🤭</h1>
   <h2>Happy Birthday En Bomma 🙈</h2>
-
-  <div class="image-container">
-    <img src="Saree2.jpg" alt="Saree2">
-  </div>
 
   <div class="quiz">
     Lov uuu My Friend ❤️‍🩹😚.... Sollu next pola....<br>
@@ -91,7 +100,7 @@
       emoji.style.bottom = "-50px";
       emoji.style.animationDuration = (4 + Math.random() * 4) + "s";
       document.body.appendChild(emoji);
-      setTimeout(() => { emoji.remove(); }, 6000);
+      setTimeout(() => { emoji.remove(); }, 7000);
     }
     setInterval(createEmoji, 700);
 
@@ -147,10 +156,14 @@
     setInterval(() => createFirework(Math.random()*canvas.width, Math.random()*canvas.height/2), 2000);
     animate();
 
-    // Quiz check
+    // Quiz check (case + space insensitive)
+    function normalize(text) {
+      return text.replace(/\s+/g, " ").trim().toLowerCase();
+    }
     function checkAnswer() {
-      const answer = document.getElementById("answer").value.trim().toLowerCase();
-      if(answer === "yes" || answer === "ok" || answer === "Lov uuu My Friend ❤️‍🩹😚") {
+      const answer = normalize(document.getElementById("answer").value);
+      const correct = normalize("Lov uuu My Friend ❤️‍🩹😚");
+      if(answer === correct) {
         window.location.href = "page7.html"; // go to next page
       } else {
         alert("Try again, Bomma! 😘");
